--- a/frontEnd-lawSystem/LawyerRegistration/lawyer.css
+++ b/frontEnd-lawSystem/LawyerRegistration/lawyer.css
@@ -1,15 +1,10 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background-color: #f4f4f4;
 }
 
 .navbar {
@@ -45,30 +40,29 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
 }
 
 .container {
     width: 90%;
-    max-width: 400px;
+    max-width: 500px;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-    margin: 20px auto;
+    margin: 30px auto;
 }
 
 .headerForm {
     display: flex;
-    align-items: center;
     background-color: #333;
     padding: 15px;
     text-align: center;
+    align-items: center;
 }
 
 .headerForm h1 {
     font-size: 22px;
-    margin-left: 20px;
+    padding-left: 60px;
     color: rgb(164, 119, 6);
 }
 
@@ -136,13 +130,16 @@ body {
     background-color: #e53935;
 }
 
+#message {
+    margin-top: 20px;
+    color: green;
+    font-weight: bold;
+}
+
 footer {
     background-color: #333;
     color: #fff;
     text-align: center;
     padding: 10px;
-    width: 100%;
     position: relative;
-    bottom: 0;
-    left: 0;
 }
