--- a/frontEnd-lawSystem/Login/login.css
+++ b/frontEnd-lawSystem/Login/login.css
@@ -4,6 +4,41 @@
     box-sizing: border-box;
 }
 
+body {
+   background: #FFFFFF url("/Images/Logo.jpg") no-repeat right top fixed;
+   background-size:cover;
+   background-position: center; 
+ 
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    background-color: #333;
+    box-shadow: 0 8px 4px rgba(0, 0, 0, 0.2);
+    padding: 8px;
+    overflow: hidden;
+}
+
+.navbar a {
+    color: white;
+    text-align: center;
+    padding: 10px 12px;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.navbar .logo {
+    margin-right: auto;
+    max-width: 40px;
+    border-radius: 0;
+}
+
 /* Estilos para o contêiner principal */
 .login-container {
     display: flex;
@@ -11,17 +46,6 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: #f0f0f0;
-}
-
-/* Estilos para o cabeçalho com o logo */
-.header {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.logo {
-    max-width: 150px;
 }
 
 /* Estilos para a caixa de login */
@@ -35,6 +59,9 @@
 }
 
 .login-box h1 {
+    background-color: #333;
+    padding: 15px;
+    color:rgb(164, 119, 6);
     margin-bottom: 20px;
     font-size: 24px;
 }
@@ -63,6 +90,7 @@
     color: #007BFF;
     text-decoration: none;
     font-size: 14px;
+    padding: 5px;
 }
 
 .actions a:hover {
