--- a/frontEnd-lawSystem/Login/login.css
+++ b/frontEnd-lawSystem/Login/login.css
@@ -5,12 +5,12 @@
 }
 
 body {
-   background: #FFFFFF url("/Images/Logo.jpg") no-repeat right top fixed;
-   background-size:cover;
-   background-position: center; 
- 
+    background-size: cover;
+    background-position: center;
+    font-family: Arial, sans-serif;
 }
 
+/* Navbar */
 .navbar {
     display: flex;
     align-items: center;
@@ -42,55 +42,61 @@ body {
 /* Estilos para o contêiner principal */
 .login-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
     min-height: 100vh;
+    background-color: #f4f4f4;
 }
 
 /* Estilos para a caixa de login */
 .login-box {
+    
+    display: flex;
+    width: 900px;
+    height: 500px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
     background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    text-align: center;
 }
 
-.login-box h1 {
-    background-color: #333;
-    padding: 15px;
-    color:rgb(164, 119, 6);
+.card-Login {
+   
+    padding: 40px;
+    background-color: white;
+}
+
+.card-Login h1 {
+    font-size: 28px;
     margin-bottom: 20px;
-    font-size: 24px;
+    color: rgb(164, 119, 6);
+    padding-block-end: 35px;
 }
 
-.login-box label {
-    display: block;
-    text-align: left;
-    margin-bottom: 8px;
+.card-Login label {
     font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
 }
 
-.login-box input {
+.card-Login input {
     width: 100%;
-    padding: 8px;
-    margin-bottom: 15px;
+    padding: 10px;
+    margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
 .actions {
-    text-align: left;
     margin-bottom: 20px;
 }
 
 .actions a {
+    font-size: 14px;
     color: #007BFF;
     text-decoration: none;
-    font-size: 14px;
-    padding: 5px;
+    margin-right: 10px;
 }
 
 .actions a:hover {
@@ -103,7 +109,7 @@ body {
 }
 
 .buttons button {
-    padding: 10px 15px;
+    padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -117,4 +123,22 @@ body {
 .buttons button[type="button"] {
     background-color: #ccc;
     color: black;
+}
+
+/* Área de imagem à direita */
+.login-box::after {
+    content: "";
+    flex: 1;
+    background: url("/Images/Logo.jpg") no-repeat center center;
+    background-size: cover;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
 }
